블록 스타일 변경

--- a/posts/220426-2.md
+++ b/posts/220426-2.md
@@ -10,9 +10,7 @@
 
 컴포넌트는 애플리케이션의 비즈니스 로직으로부터 상태를 독립시킴으로서 교체 가능성을 확보한다. 이 방식으로 당신은 복잡한 화면을 단순한 컴포넌트로 분해할 수 있다. 각 컴포넌트는 잘 정의된 API와 고정된 모의 상태들을 가지고 있다. 이는 컴포넌트들을 분해해서 다른 UI를 만들 수 있도록 재결합하는 것이 가능하도록 한다.
 
-```
-역사: 소프트웨어 엔지니어 Tom Coleman은 2017년에 컴포넌트 주도를 소개해 UI 개발이 컴포넌트 아키텍쳐와 과정으로 발전하는 것을 설명했다. 모듈화된 UI라는 개념은 마이크로서비스(microservice)와 컨테이너화(containerization)와 같은 소프트웨어 운동과 결을 같이하고 있다. 역사적인 전례로는 대략 20세기 초의 린 생산(lean manufacturing)과 대량 생산(mass manufacturing)이 있다.
-```
+> 역사: 소프트웨어 엔지니어 Tom Coleman은 2017년에 컴포넌트 주도를 소개해 UI 개발이 컴포넌트 아키텍쳐와 과정으로 발전하는 것을 설명했다. 모듈화된 UI라는 개념은 마이크로서비스(microservice)와 컨테이너화(containerization)와 같은 소프트웨어 운동과 결을 같이하고 있다. 역사적인 전례로는 대략 20세기 초의 린 생산(lean manufacturing)과 대량 생산(mass manufacturing)이 있다.
 
 ## 컴포넌트는 무엇인가?
 
